check.txt
warning: C:\Users\ACER\Documents\VSCFiles1\Overthrone\crates\overthrone-cli\Cargo.toml: file `C:\Users\ACER\Documents\VSCFiles1\Overthrone\crates\overthrone-cli\src\main.rs` found to be present in multiple build targets:
  * `bin` target `overthrone`
  * `bin` target `ovt`
warning: unused import: `SocketAddrV4`
  --> crates\overthrone-relay\src\poisoner.rs:12:26
   |
12 | use std::net::{Ipv4Addr, SocketAddrV4, UdpS...
   |                          ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `NtlmChallenge` and `NtlmResponse`
  --> crates\overthrone-relay\src\relay.rs:20:13
   |
20 | use crate::{NtlmChallenge, NtlmResponse, Pr...
   |             ^^^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused import: `ToSocketAddrs`
  --> crates\overthrone-relay\src\relay.rs:21:39
   |
21 | ... SocketAddr, ToSocketAddrs};
   |                 ^^^^^^^^^^^^^

warning: unused imports: `AtomicBool` and `Ordering`
  --> crates\overthrone-relay\src\relay.rs:23:25
   |
23 | use std::sync::atomic::{AtomicBool, Ordering};
   |                         ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> crates\overthrone-relay\src\relay.rs:24:5
   |
24 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused import: `std::thread`
  --> crates\overthrone-relay\src\relay.rs:27:5
   |
27 | use std::thread;
   |     ^^^^^^^^^^^

warning: unused import: `error`
  --> crates\overthrone-relay\src\relay.rs:28:22
   |
28 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

warning: unused import: `Ipv4Addr`
 --> crates\overthrone-relay\src\responder.rs:8:40
  |
8 | ...ner, TcpStream, Ipv4Addr};
  |                    ^^^^^^^^

warning: unused import: `RelayError`
 --> crates\overthrone-relay\src\utils.rs:6:42
  |
6 | ... NtlmResponse, RelayError, Result};
  |                   ^^^^^^^^^^

warning: unused imports: `debug` and `warn`
 --> crates\overthrone-relay\src\utils.rs:7:15
  |
7 | use tracing::{debug, warn};
  |               ^^^^^  ^^^^

warning: unused import: `warn`
  --> crates\overthrone-relay\src\lib.rs:18:21
   |
18 | use tracing::{info, warn};
   |                     ^^^^

warning: unused variable: `challenge`
   --> crates\overthrone-relay\src\relay.rs:365:13
    |
365 |         let challenge = self.extract_ntlm_...
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_challenge`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `len`
   --> crates\overthrone-relay\src\relay.rs:376:13
    |
376 |         let len = stream.read(&mut buf)
    |             ^^^ help: if this is intentional, prefix it with an underscore: `_len`

warning: unused variable: `ntlm_b64`
   --> crates\overthrone-relay\src\relay.rs:673:13
    |
673 |         let ntlm_b64 = base64_encode(ntlm_...
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ntlm_b64`

warning: unused variable: `len`
   --> crates\overthrone-relay\src\relay.rs:780:13
    |
780 |         let len = stream.read(&mut buf)
    |             ^^^ help: if this is intentional, prefix it with an underscore: `_len`

warning: unused variable: `sspi_offset`
   --> crates\overthrone-relay\src\relay.rs:904:13
    |
904 |         let sspi_offset = msg.len() as u32;
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sspi_offset`

warning: unused variable: `netbios_len`
   --> crates\overthrone-relay\src\responder.rs:591:13
    |
591 |         let netbios_len = ((buf[1] as usiz...
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_netbios_len`

warning: function `parse_ntlm_negotiate` is never used
  --> crates\overthrone-relay\src\responder.rs:71:4
   |
71 | fn parse_ntlm_negotiate(data: &[u8]) -> Opt...
   |    ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `overthrone-relay` (lib) generated 18 warnings (run `cargo fix --lib -p overthrone-relay` to apply 17 suggestions)
    Checking overthrone v0.1.1 (C:\Users\ACER\Documents\VSCFiles1\Overthrone\crates\overthrone-cli)
crates\overthrone-cli\src\commands_impl.rs:440:29: error: cannot find macro `warn` in this scope
crates\overthrone-cli\src\autopwn.rs:9:5: warning: unused import: `std::time::Instant`
crates\overthrone-cli\src\commands_impl.rs:3:5: warning: unused import: `crate::auth::Credentials`
crates\overthrone-cli\src\commands_impl.rs:13:5: warning: unused imports: `Dcc2Credential`, `LsaCredential`, and `SamCredential`
crates\overthrone-cli\src\commands_impl.rs:16:31: warning: unused import: `LapsEntry`
crates\overthrone-cli\src\main.rs:14:5: warning: unused import: `overthrone_core::graph::AttackGraph`
crates\overthrone-cli\src\main.rs:15:30: warning: unused imports: `kerberos`, `ldap::LdapSession`, and `smb::SmbSession`
crates\overthrone-cli\src\main.rs:16:5: warning: unused import: `overthrone_pilot::goals::EngagementState`
crates\overthrone-cli\src\main.rs:17:33: warning: unused imports: `NoiseLevel`, `PlanStep`, and `PlannedAction`
crates\overthrone-cli\src\main.rs:18:5: warning: unused import: `overthrone_pilot::runner::Stage`
crates\overthrone-cli\src\main.rs:20:5: warning: unused import: `std::path::Path`
crates\overthrone-cli\src\main.rs:1015:9: warning: unused import: `AttackMode`
crates\overthrone-cli\src\commands_impl.rs:251:39: error[E0599]: no method named `build` found for struct `kerberos_asn1::ticket::Ticket` in the current scope: method not found in `kerberos_asn1::ticket::Ticket`
crates\overthrone-cli\src\commands_impl.rs:307:39: error[E0599]: no method named `build` found for struct `kerberos_asn1::ticket::Ticket` in the current scope: method not found in `kerberos_asn1::ticket::Ticket`
crates\overthrone-cli\src\interactive_shell.rs:1640:28: warning: unreachable pattern: no value can reach this
crates\overthrone-cli\src\commands_impl.rs:73:25: warning: unused variable: `cli`: help: if this is intentional, prefix it with an underscore: `_cli`
crates\overthrone-cli\src\commands_impl.rs:129:25: warning: unused variable: `cli`: help: if this is intentional, prefix it with an underscore: `_cli`
crates\overthrone-cli\src\commands_impl.rs:927:22: warning: unused variable: `cli`: help: if this is intentional, prefix it with an underscore: `_cli`
crates\overthrone-cli\src\commands_impl.rs:1173:29: warning: unused variable: `rid`: help: if this is intentional, prefix it with an underscore: `_rid`
crates\overthrone-cli\src\interactive_shell.rs:544:21: warning: unused variable: `module`: help: if this is intentional, prefix it with an underscore: `_module`
crates\overthrone-cli\src\interactive_shell.rs:110:13: warning: unused variable: `arg_pos`: help: if this is intentional, prefix it with an underscore: `_arg_pos`
crates\overthrone-cli\src\main.rs:1374:9: warning: unused variable: `creds`: help: if this is intentional, prefix it with an underscore: `_creds`
crates\overthrone-cli\src\main.rs:1391:20: warning: unused variable: `cli`: help: if this is intentional, prefix it with an underscore: `_cli`
crates\overthrone-cli\src\main.rs:1471:9: warning: unused variable: `creds`: help: if this is intentional, prefix it with an underscore: `_creds`
warning: `overthrone` (bin "ovt") generated 21 warnings (14 duplicates)
error: could not compile `overthrone` (bin "ovt") due to 3 previous errors; 21 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `overthrone` (bin "overthrone") generated 21 warnings (7 duplicates)
error: could not compile `overthrone` (bin "overthrone") due to 3 previous errors; 21 warnings emitted
